Update color scheme to enhance visual consistency across action buttons and tabs

--- a/popup.html
+++ b/popup.html
@@ -42,8 +42,8 @@
       width: 64px;
       height: 64px;
       background: white;
-      color: #0d6efd;
-      border: 2px solid #0d6efd;
+      color: #1d3188;
+      border: 2px solid #1d3188;
       border-radius: 12px;
       display: flex;
       align-items: center;
@@ -53,7 +53,7 @@
     }
 
     .action-button:hover {
-      background: #0d6efd;
+      background: #1d3188;
       color: white;
     }
 
@@ -66,8 +66,8 @@
       width: 48px;
       height: 48px;
       background: white;
-      color: #0d6efd;
-      border: 2px solid #0d6efd;
+      color: #1d3188;
+      border: 2px solid #1d3188;
       border-radius: 12px;
       display: flex;
       align-items: center;
@@ -77,7 +77,7 @@
     }
 
     .toolbar button:hover {
-      background: #0d6efd;
+      background: #1d3188;
       color: white;
     }
 
@@ -116,7 +116,7 @@
     .tab:hover { background: #ced4da; }
     .tab.active {
       background: white;
-      color: #0d6efd;
+      color: #1d3188;
       position: relative;
     }
     .tab.active::after {
@@ -126,7 +126,7 @@
       left: 0;
       width: 100%;
       height: 3px;
-      background: #0d6efd;
+      background: #1d3188;
     }
 
     .view {
@@ -152,7 +152,7 @@
       margin: 0;
       font-size: 32px;
       font-weight: 700;
-      color: #0d6efd;
+      color: #1d3188;
     }
 
     #status-text {
@@ -235,7 +235,7 @@
       border-radius: 3px;
     }
     .code-editor textarea::-webkit-scrollbar-thumb:hover {
-      background-color: #0d6efd;
+      background-color: #1d3188;
     }
 
     code {
