--- a/popup.html
+++ b/popup.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Boost</title>
-  <link rel="stylesheet" href="prism.min.css">
-  <style>
+   <link rel="stylesheet" href="lib/codemirror/codemirror.css">
+   <style>
     html, body {
       margin: 0;
       padding: 0;
@@ -223,65 +223,15 @@
     .code-editor {
       position: absolute;
       inset: 0;
-      padding: 0;
-      font-family: 'Fira Code', Consolas, Monaco, 'Courier New', monospace;
-      font-size: 16px;
-      line-height: 1.5;
-      tab-size: 2;
       display: none;
     }
     .code-editor.active { display: block; }
 
-    .code-editor textarea,
-    .code-editor pre {
-      position: absolute;
-      inset: 0;
-      margin: 0;
-      padding: 16px;
-      box-sizing: border-box;
-      font: inherit;
-      line-height: inherit;
-      border: none;
-      outline: none;
-    }
-
-    .code-editor textarea {
-      background: transparent;
-      color: transparent;
-      caret-color: #333;
-      white-space: pre;
-      overflow-wrap: normal;
-      resize: none;
-      z-index: 2;
-      overflow: auto;
-      scrollbar-width: thin;
-      scrollbar-color: #ccc #ffffff;
-    }
-
-    .code-editor pre {
-      pointer-events: none;
-      z-index: 1;
-      background: white;
-      overflow: hidden;
-    }
-
-    .code-editor textarea::-webkit-scrollbar {
-      width: 6px;
-    }
-    .code-editor textarea::-webkit-scrollbar-track {
-      background: #ffffff;
-    }
-    .code-editor textarea::-webkit-scrollbar-thumb {
-      background-color: #ccc;
-      border-radius: 3px;
-    }
-    .code-editor textarea::-webkit-scrollbar-thumb:hover {
-      background-color: #1d3188;
-    }
-
-    code {
-      display: block;
-      white-space: pre;
+    .code-editor .CodeMirror {
+      height: 100%;
+      font-family: Consolas, Monaco, 'Courier New', monospace;
+      font-size: 14px;
+      line-height: 1.5;
     }
 
     /* New styles for log view */
@@ -448,14 +398,8 @@
     </div>
 
     <div class="code-editor-wrapper">
-      <div id="js-editor" class="code-editor active">
-        <textarea spellcheck="false" autocomplete="off"></textarea>
-        <pre><code class="language-javascript"></code></pre>
-      </div>
-      <div id="css-editor" class="code-editor">
-        <textarea spellcheck="false" autocomplete="off"></textarea>
-        <pre><code class="language-css"></code></pre>
-      </div>
+      <div id="js-editor" class="code-editor active"></div>
+      <div id="css-editor" class="code-editor"></div>
     </div>
   </div>
 
@@ -465,10 +409,9 @@
     </div>
   </div>
 
-  <script src="prism-core.min.js"></script>
-  <script src="prism-clike.min.js"></script>
-  <script src="prism-javascript.min.js"></script>
-  <script src="prism-css.min.js"></script>
-  <script src="popup.js"></script>
+   <script src="lib/codemirror/codemirror.js"></script>
+   <script src="lib/codemirror/javascript.js"></script>
+   <script src="lib/codemirror/css.js"></script>
+   <script src="popup.js"></script>
 </body>
 </html>
