add Tomorrow Light theme for syntax highlighting

--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Boost</title>
    <link rel="stylesheet" href="lib/codemirror/codemirror.css">
+  <link rel="stylesheet" href="lib/codemirror/tomorrow-light.css">
    <style>
     html, body {
       margin: 0;
