refactor: move inline css in popup.html to popup.css

--- a/popup.html
+++ b/popup.html
@@ -7,602 +7,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600;700&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="popup.css">
   <link rel="stylesheet" href="lib/codemirror/codemirror.css">
   <link rel="stylesheet" href="lib/codemirror/tomorrow-light.css">
-  <style>
-    :root {
-      --bg-canvas: #f0f0f0;
-      --bg-panel: #ffffff;
-      --bg-toolbar: #f8f8f8;
-      --bg-input: #f5f5f5;
-      --border-default: #d0d0d0;
-      --border-focus: #a0a0a0;
-      --text-primary: #1a1a1a;
-      --text-secondary: #666666;
-      --text-muted: #999999;
-      --accent-cyan: #00acc1;
-      --accent-cyan-light: #26c6da;
-      --accent-cyan-dark: #0097a7;
-      --accent-green: #4caf50;
-      --accent-red: #f44336;
-      --accent-amber: #ff9800;
-      --status-active: #00c853;
-      --status-inactive: #78909c;
-      --shadow-sm: 0 1px 2px rgba(0,0,0,0.1);
-      --shadow-md: 0 2px 8px rgba(0,0,0,0.15);
-      --radius-sm: 4px;
-      --radius-md: 6px;
-      --font-mono: 'JetBrains Mono', 'Fira Code', Consolas, Monaco, 'Courier New', monospace;
-      --font-sans: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
-    }
-
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-    }
-
-    html {
-      overflow: hidden;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
-      width: 600px !important;
-      height: auto !important;
-      min-height: 580px !important;
-      background: var(--bg-canvas);
-      font-family: var(--font-sans);
-      font-size: 13px;
-      color: var(--text-primary);
-      overflow: hidden;
-    }
-
-    /* Mobile layout */
-    body.mobile {
-      width: 100vw !important;
-      width: 100dvw !important;
-      min-height: 99vh !important;
-      min-height: 99dvh !important;
-      padding: 0 8px !important;
-    }
-
-    body.mobile .toolbar,
-    body.mobile .tabs,
-    body.mobile .code-editor-wrapper,
-    body.mobile .log-wrapper {
-      max-width: 100% !important;
-      box-sizing: border-box !important;
-    }
-
-    /* Toolbar */
-    .toolbar {
-      height: 48px;
-      background: var(--bg-toolbar);
-      border-bottom: 1px solid var(--border-default);
-      display: flex;
-      align-items: center;
-      padding: 0 12px;
-      flex-shrink: 0;
-      justify-content: space-between;
-      gap: 8px;
-    }
-
-    .toolbar-section {
-      display: flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    /* Tool buttons */
-    .tool-btn {
-      height: 32px;
-      min-width: 32px;
-      padding: 0 10px;
-      background: var(--bg-panel);
-      color: var(--text-secondary);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-sm);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      cursor: pointer;
-      font-family: var(--font-mono);
-      font-size: 12px;
-      font-weight: 500;
-      transition: all 0.15s ease;
-    }
-
-    .tool-btn:hover {
-      border-color: var(--border-focus);
-      color: var(--text-primary);
-      background: #fff;
-    }
-
-    .tool-btn:active {
-      transform: translateY(1px);
-    }
-
-    .tool-btn svg {
-      width: 16px;
-      height: 16px;
-    }
-
-    .tool-btn.primary {
-      background: var(--accent-cyan);
-      color: white;
-      border-color: var(--accent-cyan);
-    }
-
-    .tool-btn.primary:hover {
-      background: var(--accent-cyan-light);
-      border-color: var(--accent-cyan-light);
-    }
-
-    /* LED Status Indicator */
-    .led-indicator {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
-      font-family: var(--font-mono);
-      font-size: 11px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      padding: 4px 8px;
-      background: var(--bg-panel);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-sm);
-    }
-
-    .led {
-      width: 8px;
-      height: 8px;
-      border-radius: 50%;
-      background: var(--status-inactive);
-      box-shadow: inset 0 1px 2px rgba(0,0,0,0.2);
-      transition: all 0.3s ease;
-    }
-
-    .led.active {
-      background: var(--status-active);
-      box-shadow: 
-        inset 0 1px 2px rgba(0,0,0,0.1),
-        0 0 4px var(--status-active),
-        0 0 8px var(--status-active);
-    }
-
-    .led-text {
-      color: var(--text-secondary);
-    }
-
-    .led.active + .led-text {
-      color: var(--status-active);
-    }
-
-    /* Views */
-    .view {
-      display: none;
-      flex-direction: column;
-      overflow: hidden;
-      flex: 1;
-    }
-
-    .view.active {
-      display: flex;
-    }
-
-    /* Landing view - Tool Panel Style */
-    #landing {
-      padding: 16px;
-      gap: 16px;
-      background: var(--bg-canvas);
-    }
-
-    /* Status Panel */
-    .status-panel {
-      background: var(--bg-panel);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-md);
-      padding: 16px;
-      box-shadow: var(--shadow-sm);
-    }
-
-    .status-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      margin-bottom: 16px;
-      padding-bottom: 12px;
-      border-bottom: 1px solid var(--border-default);
-    }
-
-    .status-title {
-      font-family: var(--font-mono);
-      font-size: 11px;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-      color: var(--text-muted);
-    }
-
-    .status-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 12px;
-    }
-
-    .status-item {
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-    }
-
-    .status-label {
-      font-family: var(--font-mono);
-      font-size: 10px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      color: var(--text-muted);
-    }
-
-    .status-value {
-      font-family: var(--font-mono);
-      font-size: 13px;
-      font-weight: 500;
-      color: var(--text-primary);
-      word-break: break-all;
-    }
-
-    .status-value.domain {
-      font-weight: 600;
-      color: var(--accent-cyan-dark);
-    }
-
-    .status-value.code-size {
-      font-size: 12px;
-      color: var(--text-secondary);
-    }
-
-    .status-value.timestamp {
-      font-size: 11px;
-      color: var(--text-muted);
-    }
-
-    /* Action Panel */
-    .action-panel {
-      background: var(--bg-panel);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-md);
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 16px;
-      box-shadow: var(--shadow-sm);
-    }
-
-    .action-row {
-      display: flex;
-      gap: 12px;
-      width: 100%;
-      justify-content: center;
-    }
-
-    .action-btn {
-      flex: 1;
-      max-width: 160px;
-      height: 44px;
-      background: var(--bg-input);
-      color: var(--text-primary);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-sm);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 8px;
-      cursor: pointer;
-      font-family: var(--font-mono);
-      font-size: 12px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 0.05em;
-      transition: all 0.15s ease;
-    }
-
-    .action-btn:hover {
-      border-color: var(--border-focus);
-      background: #fff;
-      transform: translateY(-1px);
-      box-shadow: var(--shadow-sm);
-    }
-
-    .action-btn:active {
-      transform: translateY(0);
-    }
-
-    .action-btn svg {
-      width: 18px;
-      height: 18px;
-    }
-
-    .action-btn.toggle-btn {
-      border-width: 2px;
-    }
-
-    .action-btn.toggle-btn.active {
-      background: rgba(0, 172, 193, 0.1);
-      border-color: var(--accent-cyan);
-      color: var(--accent-cyan-dark);
-    }
-
-    .action-btn.toggle-btn.active .led {
-      background: var(--status-active);
-      box-shadow: 
-        inset 0 1px 2px rgba(0,0,0,0.1),
-        0 0 4px var(--status-active);
-    }
-
-    /* Empty State */
-    .empty-state {
-      background: var(--bg-panel);
-      border: 1px dashed var(--border-default);
-      border-radius: var(--radius-md);
-      padding: 32px 24px;
-      text-align: center;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 12px;
-    }
-
-    .empty-state-icon {
-      width: 48px;
-      height: 48px;
-      color: var(--border-focus);
-    }
-
-    .empty-state-text {
-      font-family: var(--font-mono);
-      font-size: 13px;
-      color: var(--text-secondary);
-      line-height: 1.5;
-    }
-
-    .empty-state-domain {
-      font-weight: 600;
-      color: var(--accent-cyan-dark);
-    }
-
-    /* Footer */
-    .panel-footer {
-      display: flex;
-      justify-content: flex-end;
-      padding-top: 8px;
-    }
-
-    .log-btn {
-      height: 28px;
-      padding: 0 12px;
-      background: transparent;
-      color: var(--text-muted);
-      border: 1px solid var(--border-default);
-      border-radius: var(--radius-sm);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 6px;
-      cursor: pointer;
-      font-family: var(--font-mono);
-      font-size: 11px;
-      font-weight: 500;
-      transition: all 0.15s ease;
-    }
-
-    .log-btn:hover {
-      border-color: var(--border-focus);
-      color: var(--text-primary);
-      background: var(--bg-panel);
-    }
-
-    .log-btn svg {
-      width: 14px;
-      height: 14px;
-    }
-
-    /* Tabs */
-    .tabs {
-      display: flex;
-      background: var(--bg-toolbar);
-      border-bottom: 1px solid var(--border-default);
-      flex-shrink: 0;
-      overflow-x: auto;
-      scrollbar-width: none;
-      -ms-overflow-style: none;
-      padding: 0 12px;
-      gap: 2px;
-    }
-
-    .tabs::-webkit-scrollbar {
-      display: none;
-    }
-
-    .tab {
-      padding: 10px 20px;
-      text-align: center;
-      background: transparent;
-      border: none;
-      border-bottom: 2px solid transparent;
-      font-family: var(--font-mono);
-      font-weight: 500;
-      font-size: 12px;
-      letter-spacing: 0.02em;
-      color: var(--text-secondary);
-      cursor: pointer;
-      transition: all 0.2s ease;
-      margin-bottom: -1px;
-      text-transform: lowercase;
-    }
-
-    .tab:hover {
-      color: var(--text-primary);
-      background: rgba(255,255,255,0.5);
-    }
-
-    .tab.active {
-      color: var(--accent-cyan-dark);
-      border-bottom-color: var(--accent-cyan);
-      background: var(--bg-panel);
-    }
-
-    /* Code editor wrapper */
-    .code-editor-wrapper {
-      flex: 1 1 0px;
-      min-height: 400px;
-      background: var(--bg-panel);
-      position: relative;
-      overflow: hidden;
-      min-height: 0;
-    }
-
-    .code-editor {
-      position: absolute;
-      inset: 0;
-      display: none;
-    }
-
-    .code-editor.active {
-      display: block;
-    }
-
-    .code-editor .CodeMirror {
-      height: 100%;
-      font-family: var(--font-mono);
-      font-size: 13px;
-      line-height: 1.5;
-    }
-
-    /* Log view */
-    #log-view {
-      background: var(--bg-canvas);
-      padding: 16px;
-    }
-
-    .log-wrapper {
-      flex: 1;
-      background: var(--bg-panel);
-      position: relative;
-      overflow: hidden;
-      min-height: 0;
-      display: flex;
-      flex-direction: column;
-      border-radius: var(--radius-md);
-      border: 1px solid var(--border-default);
-      box-shadow: var(--shadow-sm);
-    }
-
-    #log-pre {
-      flex: 1;
-      margin: 0;
-      padding: 16px;
-      font-family: var(--font-mono);
-      font-size: 12px;
-      line-height: 1.6;
-      white-space: pre-wrap;
-      word-wrap: break-word;
-      background: var(--bg-input);
-      overflow-y: auto;
-      scrollbar-width: thin;
-      scrollbar-color: var(--border-focus) transparent;
-      box-sizing: border-box;
-      color: var(--text-primary);
-    }
-
-    #log-pre::-webkit-scrollbar {
-      width: 8px;
-    }
-
-    #log-pre::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
-    #log-pre::-webkit-scrollbar-thumb {
-      background-color: var(--border-focus);
-      border-radius: 4px;
-    }
-
-    #log-pre::-webkit-scrollbar-thumb:hover {
-      background-color: var(--accent-cyan);
-    }
-
-    /* Animations */
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-
-    .view {
-      animation: fadeIn 0.2s ease;
-    }
-
-    /* Storage Bar */
-    .storage-bar {
-      display: flex;
-      align-items: center;
-      gap: 8px;
-      margin-top: 8px;
-      padding-top: 12px;
-      border-top: 1px solid var(--border-default);
-    }
-
-    .storage-label {
-      font-family: var(--font-mono);
-      font-size: 10px;
-      font-weight: 600;
-      text-transform: uppercase;
-      color: var(--text-muted);
-      white-space: nowrap;
-    }
-
-    .storage-track {
-      flex: 1;
-      height: 4px;
-      background: var(--bg-input);
-      border-radius: 2px;
-      overflow: hidden;
-    }
-
-    .storage-fill {
-      height: 100%;
-      background: var(--accent-cyan);
-      border-radius: 2px;
-      transition: width 0.3s ease;
-    }
-
-    .storage-text {
-      font-family: var(--font-mono);
-      font-size: 10px;
-      color: var(--text-muted);
-      white-space: nowrap;
-    }
-
-    body.mobile .storage-bar {
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 4px;
-    }
-
-    body.mobile .storage-track {
-      width: 100%;
-    }
-  </style>
 </head>
 <body>
 
