add version no. in popup

--- a/popup.html
+++ b/popup.html
@@ -147,6 +147,12 @@
         </button>
       </div>
     </div>
+
+    <!-- Version Footer -->
+    <div class="version-footer">
+      <span class="version-label">BOOST</span>
+      <span class="version-number" id="version-text">v2.4.0</span>
+    </div>
   </div>
 
   <!-- Editor View -->
