move the log button to the bottom section

--- a/popup.html
+++ b/popup.html
@@ -126,14 +126,6 @@
         </button>
       </div>
       
-      <div class="panel-footer">
-        <button id="log-btn" class="log-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M15 12h-5"/><path d="M15 8h-5"/><path d="M19 17V5a2 2 0 0 0-2-2H4"/><path d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3"/>
-          </svg>
-          <span>LOGS</span>
-        </button>
-      </div>
     </div>
 
     <!-- Single Create Button (shown when no script) -->
@@ -150,8 +142,16 @@
 
     <!-- Version Footer -->
     <div class="version-footer">
-      <span class="version-label">BOOST</span>
-      <span class="version-number" id="version-text">v2.4.0</span>
+      <div class="version-footer-left">
+        <span class="version-label">BOOST</span>
+        <span class="version-number" id="version-text">v2.4.0</span>
+      </div>
+      <button id="log-btn" class="log-btn">
+        <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M15 12h-5"/><path d="M15 8h-5"/><path d="M19 17V5a2 2 0 0 0-2-2H4"/><path d="M8 21h12a2 2 0 0 0 2-2v-1a1 1 0 0 0-1-1H11a1 1 0 0 0-1 1v1a2 2 0 1 1-4 0V5a2 2 0 1 0-4 0v2a1 1 0 0 0 1 1h3"/>
+        </svg>
+        <span>LOGS</span>
+      </button>
     </div>
   </div>
 
